BOT-68: Added retry mechanism (#41)
* BOT-68: changed create posts behaviour

---------
